New achievement Master Socialite (Level 8)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Steve Nolte's Git Achievements <img src='http://www.gravatar.com/avatar/e06c431b5e29b38d978f67dd0c46c59d'/></h2>
-Unlocked 35/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 101 points<br>
+Unlocked 35/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 102 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -102,6 +102,7 @@ Unlocked 35/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Master Historian (Level 8)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Master Locksmith (Level -inf)</div>  <div class="info">Add Signed-off-by line at the end of the commit log message using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> -s.</div></li>
 <li><div class="title">Master Socialite (Level 7)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
+<li><div class="title">Master Socialite (Level 8)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Master Stone Mason (Level 7)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Miller (Level 4)</div>  <div class="info">Add only part of a file to the stage 62 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
 <li><div class="title">Product Manager (Level 5)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
@@ -116,45 +117,45 @@ Unlocked 35/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  18566 rev-parse
-  18418 ls-files
-  18362 symbolic-ref
-   1077 status
-    673 pull
-    634 checkout
-    413 log
-    238 branch
-    237 push
-    209 help
-    195 commit
-    175 diff
-    167 add
-    159 merge
-    136 show
-    114 reset
-     66 tag
-     64 fetch
-     43 submodule
-     41 stash
+  20107 rev-parse
+  19945 ls-files
+  19898 symbolic-ref
+   1143 status
+    739 pull
+    684 checkout
+    483 log
+    278 branch
+    254 push
+    231 help
+    207 commit
+    195 diff
+    175 merge
+    173 add
+    145 show
+    128 reset
+     74 tag
+     66 fetch
+     47 submodule
+     45 stash
      31 clean
-     26 revert
-     20 clone
+     29 revert
+     23 clone
      20 achievements
      13 whatchanged
+     11 remote
      11 config
       9 init
-      8 remote
       8 instaweb
       6 rebase
       6 format-patch
       6 cherry-pick
+      5 --version
+      5 rm
       5 gc
       4 Wed
-      4 --version
       4 for-each-ref
       4 apply
       3 Thu
-      3 rm
       3 mv
       3 ls-remote
       3 blame
