New achievement Master Historian (Level 9)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Steve Nolte's Git Achievements <img src='http://www.gravatar.com/avatar/e06c431b5e29b38d978f67dd0c46c59d'/></h2>
-Unlocked 35/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 104 points<br>
+Unlocked 35/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 105 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -102,6 +102,7 @@ Unlocked 35/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Master Banker (Level 8)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
 <li><div class="title">Master Historian (Level 7)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Master Historian (Level 8)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
+<li><div class="title">Master Historian (Level 9)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Master Locksmith (Level -inf)</div>  <div class="info">Add Signed-off-by line at the end of the commit log message using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> -s.</div></li>
 <li><div class="title">Master Socialite (Level 7)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Master Socialite (Level 8)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
@@ -119,43 +120,43 @@ Unlocked 35/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  20370 rev-parse
-  20211 ls-files
-  20154 symbolic-ref
-   1148 status
-    750 pull
-    701 checkout
-    489 log
-    287 branch
-    257 push
-    236 help
-    210 commit
-    195 diff
-    178 merge
-    173 add
-    147 show
-    129 reset
-     76 tag
-     68 fetch
+  20734 rev-parse
+  20577 ls-files
+  20515 symbolic-ref
+   1166 status
+    767 pull
+    719 checkout
+    501 log
+    297 branch
+    261 push
+    240 help
+    215 commit
+    200 diff
+    180 merge
+    177 add
+    151 show
+    130 reset
+     82 tag
+     71 fetch
      50 submodule
      45 stash
      31 clean
-     29 revert
+     30 revert
      23 clone
      20 achievements
+     16 remote
      13 whatchanged
-     13 remote
      11 config
       9 init
       8 instaweb
       6 rebase
+      6 mv
       6 format-patch
       6 cherry-pick
       5 --version
       5 rm
       5 gc
       4 Wed
-      4 mv
       4 for-each-ref
       4 apply
       3 Thu
