--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Steve Nolte's Git Achievements <img src='http://www.gravatar.com/avatar/e06c431b5e29b38d978f67dd0c46c59d'/></h2>
-Unlocked 35/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 105 points<br>
+Unlocked 35/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 106 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -109,6 +109,7 @@ Unlocked 35/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Master Stone Mason (Level 7)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Miller (Level 4)</div>  <div class="info">Add only part of a file to the stage 62 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
 <li><div class="title">Product Manager (Level 5)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
+<li><div class="title">Seamstress (Level 4)</div>  <div class="info">amended a commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> --amend.</div></li>
 <li><div class="title">Socialite (Level 4)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Socialite (Level 5)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Socialite (Level 6)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
@@ -120,54 +121,55 @@ Unlocked 35/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  20734 rev-parse
-  20577 ls-files
-  20515 symbolic-ref
-   1166 status
-    767 pull
-    719 checkout
-    501 log
-    297 branch
-    261 push
-    240 help
-    215 commit
-    200 diff
-    180 merge
-    177 add
-    151 show
-    130 reset
-     82 tag
-     71 fetch
-     50 submodule
-     45 stash
+  24203 rev-parse
+  23960 symbolic-ref
+  23922 ls-files
+   1372 status
+    877 pull
+    795 checkout
+    552 log
+    346 branch
+    296 push
+    273 help
+    264 diff
+    248 commit
+    200 add
+    190 merge
+    160 show
+    139 reset
+     93 tag
+     77 fetch
+     53 submodule
+     49 stash
+     34 revert
      31 clean
-     30 revert
      23 clone
+     21 remote
      20 achievements
-     16 remote
-     13 whatchanged
+     14 whatchanged
      11 config
       9 init
+      8 mv
       8 instaweb
-      6 rebase
-      6 mv
+      8 cherry-pick
+      7 rebase
       6 format-patch
-      6 cherry-pick
       5 --version
       5 rm
       5 gc
+      5 for-each-ref
       4 Wed
-      4 for-each-ref
       4 apply
       3 Thu
       3 ls-remote
       3 blame
       2 web--browse
+      2 diff-index
       1 Tue
       1 reflog
       1 merge-base
       1 grep
-      1 diff-index
+      1 Fri
 </pre>
 <script type="text/javascript">
 function showLocked() {
