New achievement News Reader (Level 4)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Steve Nolte's Git Achievements <img src='http://www.gravatar.com/avatar/e06c431b5e29b38d978f67dd0c46c59d'/></h2>
-Unlocked 35/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 108 points<br>
+Unlocked 35/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 109 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -110,6 +110,7 @@ Unlocked 35/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Master Stone Mason (Level 7)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Miller (Level 4)</div>  <div class="info">Add only part of a file to the stage 62 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
 <li><div class="title">Miller (Level 5)</div>  <div class="info">Add only part of a file to the stage 228 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
+<li><div class="title">News Reader (Level 4)</div>  <div class="info">Show logs with difference each commit introduces with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-whatchanged.html">git-whatchanged</a></div></li>
 <li><div class="title">Product Manager (Level 5)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Seamstress (Level 4)</div>  <div class="info">amended a commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> --amend.</div></li>
 <li><div class="title">Socialite (Level 4)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
@@ -123,24 +124,24 @@ Unlocked 35/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  24659 rev-parse
-  24416 symbolic-ref
-  24321 ls-files
-   1408 status
-    900 pull
-    812 checkout
-    564 log
-    369 branch
-    304 push
-    281 help
-    270 diff
-    255 commit
-    207 add
+  25423 rev-parse
+  25144 symbolic-ref
+  25063 ls-files
+   1502 status
+    913 pull
+    824 checkout
+    572 log
+    371 branch
+    308 push
+    286 help
+    282 diff
+    267 commit
+    219 add
     195 merge
-    160 show
-    144 reset
+    161 show
+    146 reset
      97 tag
-     78 fetch
+     80 fetch
      53 submodule
      49 stash
      34 revert
@@ -148,19 +149,19 @@ Git commands sorted by usage:
      23 clone
      21 remote
      20 achievements
-     15 whatchanged
+     16 whatchanged
+     14 rebase
      11 config
-      9 rebase
       9 init
       8 mv
       8 instaweb
       8 cherry-pick
       6 format-patch
+      5 Wed
       5 --version
       5 rm
       5 gc
       5 for-each-ref
-      4 Wed
       4 apply
       3 Thu
       3 ls-remote
