--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Steve Nolte's Git Achievements <img src='http://www.gravatar.com/avatar/e06c431b5e29b38d978f67dd0c46c59d'/></h2>
-Unlocked 35/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 110 points<br>
+Unlocked 35/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 111 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -101,6 +101,7 @@ Unlocked 35/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Master Author (Level 8)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Master Banker (Level 7)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
 <li><div class="title">Master Banker (Level 8)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
+<li><div class="title">Master Blacksmith (Level 7)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Master Historian (Level 7)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Master Historian (Level 8)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Master Historian (Level 9)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
@@ -125,44 +126,45 @@ Unlocked 35/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  25729 rev-parse
-  25450 symbolic-ref
-  25374 ls-files
-   1541 status
-    914 pull
-    827 checkout
-    574 log
-    377 branch
-    310 push
-    287 help
-    284 diff
-    271 commit
-    228 add
-    195 merge
-    162 show
-    147 reset
-     97 tag
-     82 fetch
-     53 submodule
+  29055 rev-parse
+  28738 symbolic-ref
+  28275 ls-files
+   1750 status
+   1043 pull
+    990 checkout
+    696 log
+    429 branch
+    354 push
+    332 help
+    302 commit
+    301 diff
+    254 add
+    222 merge
+    180 show
+    167 reset
+    106 tag
+     97 fetch
+     57 submodule
      49 stash
-     34 revert
+     42 --no-pager
+     36 revert
+     31 whatchanged
      31 clean
-     23 clone
+     25 clone
      21 remote
      20 achievements
-     16 whatchanged
-     14 rebase
+     17 rebase
      11 config
       9 init
+      9 cherry-pick
       8 mv
       8 instaweb
-      8 cherry-pick
+      7 rm
       6 format-patch
+      6 for-each-ref
       5 Wed
       5 --version
-      5 rm
       5 gc
-      5 for-each-ref
       4 apply
       3 Thu
       3 ls-remote
