--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Steve Nolte's Git Achievements <img src='http://www.gravatar.com/avatar/e06c431b5e29b38d978f67dd0c46c59d'/></h2>
-Unlocked 35/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 112 points<br>
+Unlocked 35/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 113 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -91,6 +91,7 @@ Unlocked 35/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Collector (Level 6)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Dentist</div>  <div class="info">Extracted patches using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a> -p.</div></li>
 <li><div class="title">Garage Inventor</div>  <div class="info">Used a custom alias for a Git command</div></li>
+<li><div class="title">Goldsmith (Level 4)</div>  <div class="info">Reviewed patches before committing with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-diff.html">git-diff</a> --cached.</div></li>
 <li><div class="title">Historian (Level 4)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Historian (Level 5)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Historian (Level 6)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
@@ -127,37 +128,37 @@ Unlocked 35/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  29425 rev-parse
-  29105 symbolic-ref
-  28642 ls-files
-   1786 status
-   1049 pull
-   1005 checkout
-    699 log
-    434 branch
-    355 push
-    334 help
-    309 commit
-    306 diff
-    263 add
-    223 merge
-    180 show
-    169 reset
-    106 tag
-     97 fetch
+  31844 rev-parse
+  31533 symbolic-ref
+  31011 ls-files
+   1987 status
+   1182 pull
+   1151 checkout
+    763 log
+    455 branch
+    423 push
+    386 help
+    356 diff
+    346 commit
+    293 add
+    237 merge
+    193 show
+    185 reset
+    113 tag
+    110 fetch
+     77 --no-pager
      57 submodule
-     49 stash
-     46 --no-pager
-     36 revert
-     32 whatchanged
+     53 stash
+     39 whatchanged
+     39 revert
      31 clean
-     25 clone
+     26 clone
      21 remote
      20 achievements
-     17 rebase
+     18 rebase
      11 config
+     10 cherry-pick
       9 init
-      9 cherry-pick
       8 mv
       8 instaweb
       7 rm
@@ -166,9 +167,9 @@ Git commands sorted by usage:
       5 Wed
       5 --version
       5 gc
+      4 ls-remote
       4 apply
       3 Thu
-      3 ls-remote
       3 blame
       2 web--browse
       2 diff-index
