New achievement Master Historian (Level 10)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Steve Nolte's Git Achievements <img src='http://www.gravatar.com/avatar/e06c431b5e29b38d978f67dd0c46c59d'/></h2>
-Unlocked 35/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 116 points<br>
+Unlocked 35/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 117 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -104,6 +104,7 @@ Unlocked 35/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Master Banker (Level 8)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
 <li><div class="title">Master Blacksmith (Level 7)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Master Collector (Level 7)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
+<li><div class="title">Master Historian (Level 10)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Master Historian (Level 7)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Master Historian (Level 8)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Master Historian (Level 9)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
@@ -131,37 +132,37 @@ Unlocked 35/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  35725 rev-parse
-  35409 symbolic-ref
-  34793 ls-files
-   2256 status
-   1334 checkout
-   1308 pull
-    966 log
-    516 push
-    502 branch
-    443 help
-    420 diff
-    400 commit
-    335 add
-    289 merge
-    227 show
-    215 reset
-    133 fetch
-    132 tag
-    126 --no-pager
+  37604 rev-parse
+  37275 symbolic-ref
+  36679 ls-files
+   2402 status
+   1385 checkout
+   1357 pull
+   1003 log
+    538 push
+    509 branch
+    465 help
+    456 diff
+    423 commit
+    358 add
+    300 merge
+    235 show
+    223 reset
+    146 --no-pager
+    141 fetch
+    134 tag
      57 submodule
      56 stash
-     47 whatchanged
+     50 whatchanged
      43 revert
      32 clean
-     29 clone
-     23 remote
+     30 clone
+     24 remote
      20 achievements
      18 rebase
-     14 cherry-pick
+     15 cherry-pick
      11 config
-      9 mv
+     10 mv
       9 init
       8 instaweb
       7 rm
