--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Steve Nolte's Git Achievements <img src='http://www.gravatar.com/avatar/e06c431b5e29b38d978f67dd0c46c59d'/></h2>
-Unlocked 35/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 117 points<br>
+Unlocked 35/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 118 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -92,6 +92,7 @@ Unlocked 35/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Dentist</div>  <div class="info">Extracted patches using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a> -p.</div></li>
 <li><div class="title">Garage Inventor</div>  <div class="info">Used a custom alias for a Git command</div></li>
 <li><div class="title">Goldsmith (Level 4)</div>  <div class="info">Reviewed patches before committing with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-diff.html">git-diff</a> --cached.</div></li>
+<li><div class="title">Goldsmith (Level 5)</div>  <div class="info">Reviewed patches before committing with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-diff.html">git-diff</a> --cached.</div></li>
 <li><div class="title">Historian (Level 4)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Historian (Level 5)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Historian (Level 6)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
@@ -132,38 +133,38 @@ Unlocked 35/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  37604 rev-parse
-  37275 symbolic-ref
-  36679 ls-files
-   2402 status
-   1385 checkout
-   1357 pull
-   1003 log
-    538 push
-    509 branch
-    465 help
-    456 diff
-    423 commit
-    358 add
-    300 merge
-    235 show
-    223 reset
-    146 --no-pager
-    141 fetch
-    134 tag
+  41651 rev-parse
+  41315 symbolic-ref
+  40723 ls-files
+   2760 status
+   1494 checkout
+   1483 pull
+   1095 log
+    600 push
+    530 diff
+    530 branch
+    521 help
+    471 commit
+    416 add
+    349 merge
+    250 show
+    239 reset
+    184 --no-pager
+    155 fetch
+    147 tag
+     62 whatchanged
+     62 stash
      57 submodule
-     56 stash
-     50 whatchanged
-     43 revert
-     32 clean
-     30 clone
+     49 revert
+     37 clean
+     35 clone
      24 remote
      20 achievements
      18 rebase
      15 cherry-pick
+     11 mv
      11 config
-     10 mv
-      9 init
+     10 init
       8 instaweb
       7 rm
       6 format-patch
@@ -174,12 +175,12 @@ Git commands sorted by usage:
       4 ls-remote
       4 apply
       3 Thu
+      3 merge-base
       3 blame
       2 web--browse
       2 diff-index
       1 Tue
       1 reflog
-      1 merge-base
       1 grep
       1 Fri
 </pre>
